# AZUREAL

./: .gitignore  .plan  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  PTY_FEATURE.md  README.md  WORKTREES.md  architecture.html  build.rs  cli.html  configuration.html  debug-dump.html  file-viewer.html  getting-started.html  git-panel.html  health-panel.html  index.html  introduction.html  keybinding-reference.html  keybindings.html  notifications.html  platform-support.html  preset-prompts.html  print.html  projects.html  run-commands.html  searcher-c2a407aa.js  searchindex-370651fd.js  searchindex-834b8180.js  searchindex-9e62454d.js  session-pane.html  session-store.html  sessions.html  speech-to-text.html  terminal.html  toc.html  tui-interface.html  (+1 more)
.azureal/: azufig.toml  sessions.azs
.azureal/sessions/: 1db5964c-b4cf-405d-8af6-f1a137c2c20b.json  8932d74a-efa7-4827-844a-d1df4ad9f749.json  fb57e64f-917c-4cc6-bc11-5ca999597fa4.json  index.json
.claude/: settings.json
.claude/scripts/: enforce-keybindings.sh
.github/workflows/: manual.yml  release.yml
.project/: agreq  claude-code-bug-report.md  fix.md  plan.md
.project/edits/: edits.md
architecture/: event-loop.html  file-watcher.html  performance.html  render-pipeline.html
configuration/: global.html  project.html
examples/: test_notif.rs  test_window_icon.rs
file-viewer/: diff-viewer.html  edit-mode.html  file-actions.html  file-tree.html  image-viewer.html  markdown-preview.html  syntax-highlighting.html  viewer-tabs.html
getting-started/: first-launch.html  installation.html  requirements.html
git-panel/: auto-resolve.html  commit.html  layout.html  pull-push.html  rcr.html  rebase.html  squash-merge.html  staging.html
health-panel/: documentation.html  god-files.html  scope-mode.html
keybindings/: global.html  help-overlay.html  leader-sequences.html  platform-differences.html  vim-modes.html
manual/: book.toml
manual/book/: 404.html  architecture.html  cli.html  configuration.html  debug-dump.html  file-viewer.html  getting-started.html  git-panel.html  health-panel.html  index.html  introduction.html  keybinding-reference.html  keybindings.html  notifications.html  platform-support.html  preset-prompts.html  print.html  projects.html  run-commands.html  searcher-c2a407aa.js  searchindex-288e64af.js  searchindex-5ab56d13.js  searchindex-bbda9ffd.js  searchindex-ddf35765.js  session-pane.html  session-store.html  sessions.html  speech-to-text.html  terminal.html  toc-fb32f9a0.js  tui-interface.html  worktrees.html
manual/book/architecture/: event-loop.html  file-watcher.html  performance.html  render-pipeline.html
manual/book/configuration/: global.html  project.html
manual/book/file-viewer/: diff-viewer.html  edit-mode.html  file-actions.html  file-tree.html  image-viewer.html  markdown-preview.html  syntax-highlighting.html  viewer-tabs.html
manual/book/getting-started/: first-launch.html  installation.html  requirements.html
manual/book/git-panel/: auto-resolve.html  commit.html  layout.html  pull-push.html  rcr.html  rebase.html  squash-merge.html  staging.html
manual/book/health-panel/: documentation.html  god-files.html  scope-mode.html
manual/src/: SUMMARY.md  architecture.md  cli.md  configuration.md  debug-dump.md  file-viewer.md  getting-started.md  git-panel.md  health-panel.md  introduction.md  keybinding-reference.md  keybindings.md  notifications.md  platform-support.md  preset-prompts.md  projects.md  run-commands.md  session-pane.md  session-store.md  sessions.md  speech-to-text.md  terminal.md  tui-interface.md  worktrees.md
platform-support/: linux.html  macos.html  windows.html
projects/: background.html  managing.html  parallel.html
refs/: tool-result-display-options.md
resources/: AZUREAL.icns
session-pane/: ask-user-question.html  clickable-elements.html  context-meter.html  markdown.html  session-list.html  todo-widget.html  tool-calls.html  tool-results.html
session-store/: compaction.html  context-injection.html  portability.html  sqlite.html
sessions/: claude.html  codex.html  lifecycle.html  model-switcher.html  multi-agent.html
src/: app.rs  azufig.rs  backend.rs  claude.rs  cli.rs  cmd.rs  codex.rs  config.rs  db.rs  events.rs  git.rs  github.rs  install.rs  main.rs  mock_god_file.rs  models.rs  openai_models.rs  session.rs  stt.rs  syntax.rs  tui.rs  updater.rs  watcher.rs  wizard.rs
src/app/: clipboard.rs  codex_session_parser.rs  context_injection.rs  input.rs  mod.rs  prompt_history.rs  session_cache.rs  session_parser.rs  session_store.rs  state.rs  terminal.rs  types.rs  util.rs
src/app/state/: app.rs  (+16 more)
src/cli/: mod.rs
src/cmd/: mod.rs  models.rs  project.rs  session.rs
src/events/: codex_parser.rs  display.rs  parser.rs  types.rs
src/git/: branch.rs  commit.rs  core.rs  diff.rs  merge.rs  mod.rs  rebase.rs  remote.rs  staging.rs  worktree.rs
src/migrations/: 001_initial.sql  002_claude_session_id.sql  mod.rs
src/tui/: colorize.rs  draw_azureal.rs  draw_dialogs.rs  draw_file_tree.rs  draw_git_actions.rs  draw_god_files.rs  draw_health.rs  draw_input.rs  draw_issues.rs  draw_output.rs  draw_projects.rs  draw_sidebar.rs  draw_status.rs  draw_terminal.rs  draw_viewer.rs  draw_wizard.rs  event_loop.rs  file_icons.rs  input_azureal.rs  input_dialogs.rs  input_file_tree.rs  input_git_actions.rs  input_god_files.rs  input_health.rs  input_issues.rs  input_output.rs  input_projects.rs  input_rebase.rs  input_sessions.rs  input_terminal.rs  input_viewer.rs  input_wizard.rs  input_worktrees.rs  keybindings.rs  markdown.rs  mod.rs  render_events.rs  render_markdown.rs  render_thread.rs  render_tools.rs  (+3 more)
terminal/: features.html  modes.html  shell.html
tmp/: codex_edit_probe.txt  codex_live_diff_probe.txt  codex_resume_capture.jsonl  codex_stdout_capture.jsonl  codex_stdout_probe.txt  session_diff_preview_alt.md  session_diff_preview_mock.md
tui-interface/: focus-navigation.html  layout.html  mouse-support.html  text-selection.html
worktrees/: creating.html  main-browse.html  managing.html  tab-row.html
(+196 files in other folders)
