[package]
name = "crystal"
version = "0.1.0"
edition = "2021"
description = "Minimal multi-session Claude Code manager with git worktrees"
authors = ["Stravu"]
license = "MIT"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"
ansi-to-tui = "7"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# PTY for process management
portable-pty = "0.8"

# CLI parsing
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Syntax highlighting
syntect = "5.2"

# Platform-specific
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
lto = true
codegen-units = 1
strip = true
