[package]
name = "azureal"
version = "0.1.0"
edition = "2021"
description = "Minimal multi-session Claude Code manager with git worktrees"
authors = ["Stravu"]
license = "MIT"

[dependencies]
# TUI
ratatui = "0.30"
crossterm = { version = "0.29", features = ["use-dev-tty"] }
ansi-to-tui = "8"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# PTY for process management
portable-pty = "0.9"
vt100 = "0.16"

# CLI parsing
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Syntax highlighting
syntect = "5.2"
textwrap = "0.16.2"
unicode-width = "0.2"

# File watching (kqueue on macOS, inotify on Linux, ReadDirectoryChangesW on Windows)
notify = "8.2"

# Clipboard
arboard = "3"

# macOS notifications (uses native NSUserNotification API)
notify-rust = "4.12"

# Speech-to-text
whisper-rs = { version = "0.15", features = ["metal"] }
cpal = "0.17"

# Platform-specific
[target.'cfg(unix)'.dependencies]
libc = "0.2"

## Dev builds: optimize hot-path dependencies so debug builds don't crawl.
## serde_json does JSON parsing on every streaming event (~62/sec),
## syntect does syntax highlighting on every render — both are 3-5x slower at opt-level 0.
[profile.dev.package.serde_json]
opt-level = 2
[profile.dev.package.serde]
opt-level = 2
[profile.dev.package.syntect]
opt-level = 2

[profile.release]
lto = true
codegen-units = 1
strip = true
