[package]
name = "azureal"
version = "1.0.82"
edition = "2021"
description = "Minimal multi-session Claude Code manager with git worktrees"
authors = ["Stravu"]
license = "MIT"

[dependencies]
# TUI
ratatui = "0.30"
crossterm = "0.29"
ansi-to-tui = "8"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
rusqlite = { version = "0.39", features = ["bundled"] }
zstd = "0.13"

# PTY for process management
portable-pty = "0.9"
vt100 = "0.16"

# CLI parsing
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Syntax highlighting (tree-sitter)
tree-sitter = "0.26"
tree-sitter-highlight = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-json = "0.24"
tree-sitter-toml-ng = "0.7"
tree-sitter-bash = "0.25"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-go = "0.25"
tree-sitter-html = "0.23"
tree-sitter-css = "0.25"
tree-sitter-java = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-lua = "0.5"
tree-sitter-yaml = "0.7"
tree-sitter-md = "0.5"
tree-sitter-scala = "0.25"
tree-sitter-r = "1.2"
tree-sitter-haskell = "0.23"
tree-sitter-php = "0.24"
tree-sitter-sequel = "0.3"
tree-sitter-perl = "1.1"
textwrap = "0.16.2"
unicode-width = "0.2"

# File watching (kqueue on macOS, inotify on Linux, ReadDirectoryChangesW on Windows)
notify = "8.2"

# Image rendering in viewer (terminal graphics: Kitty/Sixel/iTerm2/halfblock)
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "webp", "ico"] }
ratatui-image = { version = "10.0", default-features = false, features = ["crossterm", "image-defaults"] }

# Clipboard
arboard = "3"

# macOS notifications (uses native NSUserNotification API)
notify-rust = "4.12"

# Speech-to-text
whisper-rs = "0.15"
cpal = "0.17"
dunce = "1.0.5"

# Auto-updater (download from GitHub releases)
ureq = "3"
tar = "0.4"
flate2 = "1"

# Platform-specific
[target.'cfg(unix)'.dependencies]
libc = "0.2"
crossterm = { version = "0.29", features = ["use-dev-tty"] }

[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.15", features = ["metal"] }

[target.'cfg(target_os = "linux")'.dependencies]
whisper-rs = { version = "0.15", features = ["vulkan"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_System_Threading"] }
whisper-rs = { version = "0.15", features = ["vulkan"] }

# Vendor patch: upstream whisper-rs-sys generates bindgen layout_tests that
# fail on MSVC (whisper_full_params struct size mismatch). Our vendored fork
# adds .layout_tests(false) to the bindgen builder to suppress these assertions.
[patch.crates-io]
whisper-rs = { path = "vendor/whisper-rs" }
whisper-rs-sys = { path = "vendor/whisper-rs/sys" }

## Dev builds: optimize hot-path dependencies so debug builds don't crawl.
## serde_json does JSON parsing on every streaming event (~62/sec),
## tree-sitter does syntax highlighting on every render — both are 3-5x slower at opt-level 0.
[profile.dev.package.serde_json]
opt-level = 2
[profile.dev.package.serde]
opt-level = 2
[profile.dev.package.tree-sitter]
opt-level = 2
[profile.dev.package.tree-sitter-highlight]
opt-level = 2

[profile.release]
lto = true
codegen-units = 1
strip = true

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[dev-dependencies]
tempfile = "3.27"
